--- a/.github/workflows/updater.yaml
+++ b/.github/workflows/updater.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Install dependencies (if any)
         run: |
           python -m pip install --upgrade pip
+          python -m pip install UnityPy==1.23.0 # https://github.com/K0lb3/UnityPy/issues/354
           python -m pip install sssekai        
 
       - name: Run the updater script
